tests/ui/for/issue-20605.next.stderr
error[E0277]: `dyn Iterator<Item = &'a mut u8>` is not an iterator
  --> $DIR/issue-20605.rs:6:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^ the trait `IntoIterator` is not implemented for `dyn Iterator<Item = &'a mut u8>`
   |
   = note: the trait bound `dyn Iterator<Item = &'a mut u8>: IntoIterator` is not satisfied
   = note: required for `dyn Iterator<Item = &'a mut u8>` to implement `IntoIterator`
help: consider mutably borrowing here
   |
LL |     for item in &mut *things { *item = 0 }
   |                 ++++

error[E0614]: type `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::Item` cannot be dereferenced
  --> $DIR/issue-20605.rs:6:27
   |
LL |     for item in *things { *item = 0 }
   |                           ^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0614.
For more information about an error, try `rustc --explain E0277`.
